# netcdf-scm

./: .bandit.yml  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pylintrc  .stickler.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  bandit.yml  big_crunch_profile.txt  conda-environment-minimal.yaml  dev-pip-requirements.txt  environment-dev.yaml  environment-dev.yml  environment-minimal.yaml  environment.yml  medium_crunch_profile.txt  pip-requirements-dev.txt  pip-requirements-minimal.txt  serial_speeds_dynamic_lazy_decision_no_output_writing.txt  serial_speeds_dynamic_lazy_decision_no_output_writing_synchronous.txt  serial_speeds_dynamic_lazy_decision_with_output_writing.txt  setup.cfg  setup.py  small_crunch_profile.txt  speed_test.txt
docs_to_update/: snippets_to_include.md
notebooks/: atmos-land-ocean-handling.ipynb  cmip6-conc-file-handling.ipynb  crunch-cmip5-data.ipynb  default-land-ocean-mask.ipynb  demo.ipynb  demo.nbconvert.ipynb  masks.ipynb  miscellaneous-reading.ipynb  ocean-data.ipynb  path-handling.ipynb  stitching-and-normalisation.ipynb  tests_sanitize.cfg  weights.ipynb  wranglers.ipynb  year-zero-handling.ipynb
paper/: paper.bib  paper.md
performance_tests_results/: big_crunch_profile.txt  medium_crunch_profile.txt  small_crunch_profile.txt  speed_test.txt  speed_test_1_worker.txt  speed_test_2_workers.txt  speed_test_3_workers.txt  speed_test_low_memory.txt  speed_test_my_best.txt
scripts/: crunch_to_scm.py  full-process.sh  generate-test-data.sh  profile.sh  scratch-process.sh  (+11 more)
(+287 files in other folders)
